[refactoring] Add comments for practice demonstrating how to implement